tools/tests/errors/surf_num_13.ki
# gamma at a non-positive integer pole is a math domain error.
var m = import("math")
discard m.gamma(0)
